bootstrap/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: local-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.__INGRESS_BASE_DOMAIN__"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.__INGRESS_BASE_DOMAIN__"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: local-gateway-wildcard-tls
      allowedRoutes:
        namespaces:
          from: All
